# ngs-mpi-project

./: .gitignore  README.md  REPORT.md  student.txt
configs/: small.conf
experiments/: results.txt  run_experiments.sh
mpi_runtime/: CMakeLists.txt
mpi_runtime/include/: dijkstra.h  graph.h  leader_election.h  logger.h  metrics.h  partition.h
mpi_runtime/src/: dijkstra.cpp  graph.cpp  leader_election.cpp  main.cpp  metrics.cpp  partition.cpp
mpi_runtime/tests/: mpi_tests.cpp  small_graph.json  small_part.json  unit_tests.cpp
outputs/: graph.json  graph2.json  part2.json
tools/graph_export/: Export.scala  export.sh
tools/partition/: partition.py
